Most functional and styling components done - minor colour fixes and spacing all that is required

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ input {
 /* CLASSES */
 .container {
     width: 90%;
-    margin: 0 auto;
+    margin: 10px auto;
     text-align: center;
 }
 
@@ -35,6 +35,8 @@ input {
     display: inline-block;
     width: 100%;
     max-width: 300px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 /* LIGHTBOX */
@@ -43,13 +45,17 @@ input {
   background-color: rgba(0,0,0,0.7);
 }
 
-img.mfp-img {
-  max-width: 750px;
+.mfp-figure {
+  margin-top: -10%;
 }
 
-div.mfp-title {
+.mfp-close {
+  display: none;
+}
+
+.mfp-title {
   max-width: 600px;
-  margin: 50px auto 0;
+  margin: 5px auto 0;
   padding: 0;
 }
 
@@ -58,14 +64,14 @@ div.mfp-title {
 }
 
 /* MEDIA */
-@media(min-width: 600px) {
+@media(min-width: 750px) {
 
 .container {
     max-width: 1024px;
 }
 
 #search {
-    max-width: 50%;
+    max-width: 47.5%;
 }
 
 .image-thumbnail img {
@@ -78,8 +84,14 @@ div.mfp-title {
     display: inline-block;
     width: 100%;
     max-width: 250px;
+    margin: 0;
 }
 
 /* LIGHTBOX */
-
+.mfp-figure {
+  max-width: 750px;
+}
+.mfp-title {
+  margin-top: 50px;
+}
 }
